--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         const link = item.el.attr('data-link');
                         if (link) {
                             const buttonHtml = `
-                <div class="popup-button" style="text-align: center; margin: -95px;">
+                <div class="popup-button" style="text-align: center;">
                     <a href="${link}" target="_blank" class="btn" style=" font-size:18px;
                         display: inline-block; 
                         padding: 10px 20px; 
