--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Carousel</a>
+                <a class="navbar-brand" href="#">La Matanza Clasificados</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center my-2">
-                    <h4>Buscá y encontrá todo!!</h4>
+                    <img src="/img/boton-2.webp" width="100%" height="auto" alt="">
                 </div>
             </div>
             <div class="portfolio-menu mt-2 mb-4">
@@ -128,9 +128,9 @@
             <div class="portfolio-item row">
 
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/img1.jpg" class="fancylight popup-btn with-caption image-link popup-image"
+                    <a href="/img/cliente 1.webp" class="fancylight popup-btn with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/img1.jpg" alt="Imagen 1">
+                        <img class="img-fluid" src="/img/cliente 1.webp" alt="Imagen 1">
                         
                     </a>
                 </div>
