--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
                     </div> -->
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio1 a.jpg" class="fancylight popup-btn popup-image"
-                        data-link="https://wa.link/99wodj" data-fancybox-group="light">
+                        data-link="https://wa.link/99wodj" name="Valentina" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio1 a.jpg" alt="">
                     </a>
                 </div>
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio2.webp" class="fancylight popup-btn popup-image"
-                        data-link="https://wa.link/y4o27e" data-fancybox-group="light">
+                        data-link="https://wa.link/y4o27e" name="Sol y Luna" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio2.webp" alt="">
                     </a>
                 </div>
@@ -562,6 +562,7 @@
                         $('.mfp-wrap .popup-button').remove();
 
                         const link = item.el.attr('data-link');
+                        const nombre = item.el.attr('name');
                         if (link) {
                             const buttonHtml = `
                 <div class="popup-button" style="text-align: center;">
@@ -572,7 +573,7 @@
                         color: white; 
                         text-decoration: none; 
                         border-radius: 5px;">
-                        WhatsApp
+                        WhatsApp ${nombre}
                     </a>
                 </div>`;
                             $('.mfp-container').append(buttonHtml);
