--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
                         <img class="img-fluid" src="/img/negocio12.webp" alt="">
                     </a>
                 </div>
+                <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
+                    <a href="/img/negocio13.webp" class="fancylight popup-bt with-caption image-link popup-image"
+                        data-link="https://wa.link/y4o27e" data-fancybox-group="light">
+                        <img class="img-fluid" src="/img/negocio13.webp" alt="">
+                    </a>
+                </div>
                 <div class="item lava col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio16.jpg" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
