correccion de popup-botton

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="portfolio-menu mt-2 mb-4">
                 <ul>
-                    <li class="btn btn-outline-dark active" data-filter="*">All</li>
+                    <li class="btn btn-outline-dark active" data-filter="*">Todo</li>
                     <li class="btn btn-outline-dark" data-filter=".estet">Estetica</li>
                     <li class="btn btn-outline-dark" data-filter=".tecnico">Tecnicos</li>
                     <li class="btn btn-outline-dark text" data-filter=".abog">Abogados/Gestores</li>
