--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                         
                     </div> -->
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio1 a.jpg" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio1-a.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/99wodj" name="Valentina" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio1 a.jpg" alt="">
+                        <img class="img-fluid" src="/img/negocio1-a.webp" alt="">
                     </a>
                 </div>
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
@@ -272,9 +272,9 @@
                     </a>
                 </div>
                 <div class="item abog col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio10.jpg" class="fancylight popup-btn with-caption image-link popup-image"
+                    <a href="/img/negocio10.webp" class="fancylight popup-btn with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio10.jpg" alt="">
+                        <img class="img-fluid" src="/img/negocio10.webp" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
@@ -296,27 +296,27 @@
                     </a>
                 </div>
                 <div class="item lava col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio16.jpg" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio16.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio16.jpg" alt="">
+                        <img class="img-fluid" src="/img/negocio16.webp" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio21.jpg" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio21.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio21.jpg" alt="">
+                        <img class="img-fluid" src="/img/negocio21.webp" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio25.jpg" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio25.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio25.jpg" alt="">
+                        <img class="img-fluid" src="/img/negocio25.webp" alt="">
                     </a>
                 </div>
                 <div class="item clases col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio26.jpg" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio26.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio26.jpg" alt="">
+                        <img class="img-fluid" src="/img/negocio26.webp" alt="">
                     </a>
                 </div>
 
