--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         </div>
         <div class="promo">
-            <img src="/img/publicar aca.webp" alt="">
+            <img loading="lazy" src="/img/publicar aca.webp" alt="">
         </div>
         <div class="contacto">
             <div class="enlaces">
