--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             </a>
 
         </div> -->
-        <p>&copy; 2025 La Matanza Clasificados ●</p>&nbsp;
+        <p>&copy; 2025 La Matanza Clasificados</p>&nbsp;
         <a href="#" id="abrirModal">Términos y condiciones</a>
     </footer>
 
