corrijo pie de pagina

--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
             </a>
 
         </div> -->
-        <p>&copy; 2025 La Matanza Clasificados</p>&nbsp;
-        <a href="#" id="abrirModal">Términos y condiciones</a>
+        <p>&copy; 2025 La Matanza Clasificados</p>&nbsp;&nbsp;
+        <a href="#" id="abrirModal">Términos y Condiciones</a>
     </footer>
 
 
