cambiamos formato de imagenes

--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
 <body>
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container-fluid">
+            <div class="container">
                 <img src="/img/la matanza.ico" alt="" height="auto" width="30px">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#Inicio">Inicio</a>
                         </li>
@@ -168,7 +168,7 @@
 
 
         <div class="prueba">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -232,61 +232,61 @@
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio1-a.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/99wodj" name="Valentina" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio1-a.webp" alt="" loading="lazy">
+                        <img class="img-fluid" src="/img/negocio1-a.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio2.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" name="Sol y Luna" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio2.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio2.avif" alt="">
                     </a>
                 </div>
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio3.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/99wodj" name="Joana" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio3.webp" alt="" loading="lazy">
+                        <img class="img-fluid" src="/img/negocio3.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio4.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" name="Ro-Nails" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio4.webp" alt="" loading="lazy">
+                        <img class="img-fluid" src="/img/negocio4.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio5.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio5.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio5.avif" alt="">
                     </a>
                 </div>
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio6.webp" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio6.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio6.avif" alt="">
                     </a>
                 </div>
                 <div class="item abog col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio10.webp" class="fancylight popup-btn with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio10.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio10.avif" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio11.webp" class="fancylight popup-btn with-caption image-link popup-image"
                         data-link="https://wa.link/99wodj" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio11.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio11.avif" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio12.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio12.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio12.avif" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio13.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio13.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio13.avif" alt="">
                     </a>
                 </div>
                 <div class="item lava col-lg-3 col-md-4 col-6 col-sm gallery">
@@ -298,19 +298,14 @@
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio21.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio21.webp" alt="" loading="lazy">
+                        <img class="img-fluid" src="/img/negocio21.avif" alt="" loading="lazy">
                     </a>
                 </div>
-                <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio25.webp" class="fancylight popup-bt with-caption image-link popup-image"
-                        data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio25.webp" alt="" loading="lazy">
-                    </a>
-                </div>
+                
                 <div class="item clases col-lg-3 col-md-4 col-6 col-sm gallery">
                     <a href="/img/negocio26.webp" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
-                        <img class="img-fluid" src="/img/negocio26.webp" alt="">
+                        <img class="img-fluid" src="/img/negocio26.avif" alt="">
                     </a>
                 </div>
                 <div class="item comidas col-lg-3 col-md-4 col-6 col-sm gallery">
@@ -667,6 +662,19 @@
             document.getElementById("modalLegal").style.display = "none";
         };
     </script>
+
+
+<!--Menu-->
+
+<!-- <script>
+document.querySelectorAll('.nav-link').forEach(link => {
+  link.addEventListener('click', function() {
+    document.querySelectorAll('.nav-link').forEach(i => i.classList.remove('active'));
+    this.classList.add('active');
+  });
+});
+</script> -->
+
 
     
 </body>
