correccion de transition

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="icon" href="/img/la matanza.ico">
     <!-- Open Graph (Facebook, WhatsApp, Instagram) -->
     <meta property="og:title" content="La Matanza Clasificados">
-    <meta property="og:description"
-        content="Publicamos tu comercio o emprendimiento!">
+    <meta property="og:description" content="Publicamos tu comercio o emprendimiento!">
     <meta property="og:image" content="https://lamatanzaclasificados.github.io//img/v-previa.jpg">
     <meta property="og:url" content="https://lamatanzaclasificados.github.io/">
     <meta property="og:type" content="website">
@@ -168,7 +167,7 @@
 
 
         <div class="prueba">
-            <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
