--- a/index.html
+++ b/index.html
@@ -229,61 +229,61 @@
             <div class="portfolio-item row">
 
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio1-a.webp" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio1-a.avif" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/99wodj" name="Valentina" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio1-a.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio2.webp" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio2.avif" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" name="Sol y Luna" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio2.avif" alt="">
                     </a>
                 </div>
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio3.webp" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio3.avif" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/99wodj" name="Joana" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio3.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio4.webp" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio4.avif" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" name="Ro-Nails" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio4.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 <div class="item gts estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio5.webp" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio5.avif" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio5.avif" alt="">
                     </a>
                 </div>
                 <div class="item estet col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio6.webp" class="fancylight popup-btn popup-image"
+                    <a href="/img/negocio6.avif" class="fancylight popup-btn popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio6.avif" alt="">
                     </a>
                 </div>
                 <div class="item abog col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio10.webp" class="fancylight popup-btn with-caption image-link popup-image"
+                    <a href="/img/negocio10.avif" class="fancylight popup-btn with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio10.avif" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio11.webp" class="fancylight popup-btn with-caption image-link popup-image"
+                    <a href="/img/negocio11.avif" class="fancylight popup-btn with-caption image-link popup-image"
                         data-link="https://wa.link/99wodj" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio11.avif" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio12.webp" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio12.avif" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio12.avif" alt="">
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio13.webp" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio13.avif" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio13.avif" alt="">
                     </a>
@@ -295,14 +295,14 @@
                     </a>
                 </div>
                 <div class="item tecnico col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio21.webp" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio21.avif" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio21.avif" alt="" loading="lazy">
                     </a>
                 </div>
                 
                 <div class="item clases col-lg-3 col-md-4 col-6 col-sm gallery">
-                    <a href="/img/negocio26.webp" class="fancylight popup-bt with-caption image-link popup-image"
+                    <a href="/img/negocio26.avif" class="fancylight popup-bt with-caption image-link popup-image"
                         data-link="https://wa.link/y4o27e" data-fancybox-group="light">
                         <img class="img-fluid" src="/img/negocio26.avif" alt="">
                     </a>
