Eliminamos scrool indeseado

--- a/index.html
+++ b/index.html
@@ -694,14 +694,14 @@
                     }
 
                     // Scroll en celulares
-                    setTimeout(() => {
+                   /* setTimeout(() => {
                         if (window.innerWidth < 768) {
                             const y =
                                 tituloFiltro.getBoundingClientRect().top +
                                 window.scrollY - 80;
                             window.scrollTo({ top: y, behavior: "smooth" });
                         }
-                    }, 200);
+                    }, 200);*/
 
                 });
             });
@@ -825,12 +825,12 @@ document.querySelectorAll('.nav-link').forEach(link => {
 
     </script>
 
-    <script>
+    <!-- <script>
         window.addEventListener("load", () => {
             window.scrollTo(0, 0);
         });
 
-    </script>
+    </script> -->
 
 
 </body>
